examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__boolean_operators@a_and_not_b_and_c.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            BooleanOperator(
                                BooleanOperator {
                                    right: PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    operator: Token_And(
                                        Token_And {
                                            [RANGE]
                                        },
                                    ),
                                    left: BooleanOperator(
                                        BooleanOperator {
                                            right: NotOperator(
                                                NotOperator {
                                                    argument: PrimaryExpression(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                            operator: Token_And(
                                                Token_And {
                                                    [RANGE]
                                                },
                                            ),
                                            left: PrimaryExpression(
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
