examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__boolean_operators@not d.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            NotOperator(
                                NotOperator {
                                    argument: PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
