examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__call_expressions.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                                _id: 3,
                                                _parent: Some(
                                                    2,
                                                ),
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [],
                                                [RANGE]
                                                _id: 4,
                                                _parent: Some(
                                                    2,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 2,
                                        _parent: Some(
                                            1,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                                _id: 7,
                                                _parent: Some(
                                                    6,
                                                ),
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Integer(
                                                                Integer {
                                                                    [RANGE]
                                                                    _id: 9,
                                                                    _parent: Some(
                                                                        8,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                                _id: 8,
                                                _parent: Some(
                                                    6,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 6,
                                        _parent: Some(
                                            5,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 5,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                                _id: 12,
                                                _parent: Some(
                                                    11,
                                                ),
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                    _id: 14,
                                                                    _parent: Some(
                                                                        13,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    KeywordArgument(
                                                        KeywordArgument {
                                                            name: Identifier {
                                                                [RANGE]
                                                                _id: 16,
                                                                _parent: Some(
                                                                    15,
                                                                ),
                                                            },
                                                            value: PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                        _id: 17,
                                                                        _parent: Some(
                                                                            15,
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                            [RANGE]
                                                            _id: 15,
                                                            _parent: Some(
                                                                13,
                                                            ),
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                                _id: 13,
                                                _parent: Some(
                                                    11,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 11,
                                        _parent: Some(
                                            10,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 10,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Call(
                                    Call {
                                        function: Identifier(
                                            Identifier {
                                                [RANGE]
                                                _id: 20,
                                                _parent: Some(
                                                    19,
                                                ),
                                            },
                                        ),
                                        arguments: ArgumentList(
                                            ArgumentList {
                                                children: [
                                                    Expression(
                                                        PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                    _id: 22,
                                                                    _parent: Some(
                                                                        21,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    Expression(
                                                        PrimaryExpression(
                                                            Integer(
                                                                Integer {
                                                                    [RANGE]
                                                                    _id: 23,
                                                                    _parent: Some(
                                                                        21,
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                ],
                                                [RANGE]
                                                _id: 21,
                                                _parent: Some(
                                                    19,
                                                ),
                                            },
                                        ),
                                        [RANGE]
                                        _id: 19,
                                        _parent: Some(
                                            18,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                    _id: 18,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
    ],
    [RANGE]
    _id: 0,
    _parent: None,
}
